fix: Fixed right side tabs on collapsed mode shifting the browser to the right, b=(no-bug), c=compact-mode, tabs

--- a/src/zen/tabs/zen-tabs/vertical-tabs.css
+++ b/src/zen/tabs/zen-tabs/vertical-tabs.css
@@ -441,7 +441,7 @@
   scrollbar-color: color-mix(in srgb, currentColor 26%, transparent) transparent; /* Custom scrollbar */
 
   /* Negative margin hack for workspace transitions (only if workspaces are enabled) */
-  :root[zen-workspace-id] & {
+  :root[zen-workspace-id][zen-sidebar-expanded='true'] & {
     margin-left: calc(-1 * var(--zen-toolbox-padding));
     width: calc(100% + var(--zen-toolbox-padding) * 2);
   }
@@ -755,6 +755,13 @@
   & .zen-essentials-container {
     justify-content: center;
     grid-template-columns: 1fr !important;
+    padding: 0 !important;
+    max-width: var(--zen-sidebar-width) !important;
+    min-width: unset !important;
+  }
+
+  & #zen-essentials-wrapper {
+    margin-left: unset !important;
   }
 
   /* Style new tab button when collapsed */
